# swordcase

./: LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/data/: app_list.json
src-tauri/src/: main.rs
src/assets/css/: main.css
src/assets/store/: store.ts
src/common/: entity.ts
src/components/: ClickMenuComponent.vue  TabItemComponent.vue
src/stores/: app.ts
